force-app/main/default/objects/Opportunity/fields/AllianceProduct__c.field-meta.xml
<CustomField>
    <fullName>AllianceProduct__c</fullName>
    <label>提携商品</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T-4OO</fullName>
            </value>
            <value>
                <fullName>LAWGUE（トライアル100%）</fullName>
            </value>
            <value>
                <fullName>LAWGUE（トライアル50%）</fullName>
            </value>
            <value>
                <fullName>LAWGUE（製品版）</fullName>
            </value>
            <value>
                <fullName>LAWGUE T-4OO</fullName>
            </value>
            <value>
                <fullName>NTTデータ</fullName>
            </value>
            <value>
                <fullName>T-4OO（35%）</fullName>
            </value>
            <value>
                <fullName>ネットラーニング</fullName>
            </value>
            <value>
                <fullName>COTOHA</fullName>
            </value>
            <value>
                <fullName>coverage代理店案件</fullName>
                <isActive>false</isActive>
                <label>coverage代理店案件</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>