force-app/main/default/objects/Opportunity/fields/AllianceProductsMarginRate__c.field-meta.xml
<CustomField>
    <fullName>AllianceProductsMarginRate__c</fullName>
    <formula>CASE(TEXT(AllianceProduct__c),
&apos;LAWGUE（製品版）&apos;,0.35,
&apos;T-4OO（35%）&apos;,0.35,
&apos;NTTデータ&apos;,0.2 ,
&apos;LAWGUE（トライアル50%）&apos;,0.5,
&apos;LAWGUE T-4OO&apos;,0,
&apos;ネットラーニング&apos;,0.2,
&apos;COTOHA&apos;,0.2,
&apos;T-4OO&apos;,0.5,null )</formula>
    <label>提携商品マージン率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>