force-app/main/default/objects/Opportunity/fields/ApplicationAppOff__c.field-meta.xml
<CustomField>
    <fullName>ApplicationAppOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>申込承認済を戻す（営業管理専用）</label>
    <type>Checkbox</type>
</CustomField>