force-app/main/default/objects/Opportunity/fields/ApplicationApprovalPattern__c.field-meta.xml
<CustomField>
    <fullName>ApplicationApprovalPattern__c</fullName>
    <formula>IF(
/*GM＞経理メンバー＞経理部長承認の場合6を返す*/
  NOT(ISPICKVAL(NegotiationPaymentSite__c, &quot;翌月末払い&quot;)
),6,
IF(
/*GM＞関口＞経理メンバー承認の場合5を返す*/
OR(
 ExemptionTarget__c ,
 ExceptionBillPosting__c ,
 NOT( ISBLANK( IrregularMatterMemo__c ) ) ,
 NoticeEditExists__c 
), 5,
IF(
/*GM＞関口承認の場合3を返す*/
OR( 
 ProductDiscount__c = true,
 OutOfPriceAfterUpdate__c = true,
 SpecificProductsNumber__c  &gt;= 1,
 AutoUpdatable__c = false,
 UpdateMonths__c = 3,
 UpdateMonths__c = 6
), 3,
IF (
/*GM承認の場合1を返す*/
 OR( 
 ProductDiscount__c = false,
 OutOfPriceAfterUpdate__c = false
),1,0
)
) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>申込承認パターン</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>