force-app/main/default/objects/Opportunity/fields/ApplicationApproved__c.field-meta.xml
<CustomField>
    <fullName>ApplicationApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>申込承認済</label>
    <type>Checkbox</type>
</CustomField>