force-app/main/default/objects/Opportunity/fields/ApplicationDocument__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDocument__c</fullName>
    <label>【削除予定】申込書</label>
    <type>Url</type>
</CustomField>