force-app/main/default/objects/Opportunity/fields/ApplicationRepresentative__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRepresentative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申込担当者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>申込担当者となっている商談</relationshipLabel>
    <relationshipName>Opportunitie_ApplicationRepresentatives</relationshipName>
    <type>Lookup</type>
</CustomField>