force-app/main/default/objects/Opportunity/fields/ApplicationWritingCreationMethod__c.field-meta.xml
<CustomField>
    <fullName>ApplicationWritingCreationMethod__c</fullName>
    <label>申込書面作成方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>営業事務</fullName>
            </value>
            <value>
                <fullName>作成不要（同条件更新）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>