force-app/main/default/objects/Opportunity/fields/AppointmentCancelCauseDetail__c.field-meta.xml
<CustomField>
    <fullName>AppointmentCancelCauseDetail__c</fullName>
    <label>アポキャン詳細理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01_音信不通</fullName>
            </value>
            <value>
                <fullName>02_先方キャンセル（タイミング）</fullName>
            </value>
            <value>
                <fullName>03_先方キャンセル（ニーズなしと言われた）</fullName>
            </value>
            <value>
                <fullName>04_部署違い（法務を扱う部署でない）</fullName>
            </value>
            <value>
                <fullName>05_担当違い（法務従事者だが検討権限がない）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>