force-app/main/default/objects/Opportunity/fields/AppRecognition__c.field-meta.xml
<CustomField>
    <fullName>AppRecognition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>受注の承認申請</label>
    <type>Checkbox</type>
</CustomField>