force-app/main/default/objects/Opportunity/fields/ApproverEmail__c.field-meta.xml
<CustomField>
    <fullName>ApproverEmail__c</fullName>
    <label>承認者メールアドレス</label>
    <type>Email</type>
</CustomField>