force-app/main/default/objects/Opportunity/fields/ApproverName__c.field-meta.xml
<CustomField>
    <fullName>ApproverName__c</fullName>
    <label>承認者氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>