force-app/main/default/objects/Opportunity/fields/AutomaticUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>AutomaticUpdateDate__c</fullName>
    <label>自動更新日</label>
    <type>Date</type>
</CustomField>