force-app/main/default/objects/Opportunity/fields/AutomaticUpdateTarget__c.field-meta.xml
<CustomField>
    <fullName>AutomaticUpdateTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動更新対象</label>
    <type>Checkbox</type>
</CustomField>