force-app/main/default/objects/Opportunity/fields/AutoUpdatable__c.field-meta.xml
<CustomField>
    <fullName>AutoUpdatable__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>自動更新無（双方協議）の場合はチェックしない</inlineHelpText>
    <label>自動更新有</label>
    <type>Checkbox</type>
</CustomField>