force-app/main/default/objects/Opportunity/fields/BillInfoCreationDate__c.field-meta.xml
<CustomField>
    <fullName>BillInfoCreationDate__c</fullName>
    <label>請求書情報作成日</label>
    <type>Date</type>
</CustomField>