force-app/main/default/objects/Opportunity/fields/BillingCollectionSite__c.field-meta.xml
<CustomField>
    <fullName>BillingCollectionSite__c</fullName>
    <defaultValue>0</defaultValue>
    <label>回収サイト</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>