force-app/main/default/objects/Opportunity/fields/BillingId__c.field-meta.xml
<CustomField>
    <fullName>BillingId__c</fullName>
    <formula>IF( ISBLANK(BillingAddress__c),
CASESAFEID(AccountId),
CASESAFEID(BillingAddress__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求先ID</label>
    <type>Text</type>
</CustomField>