force-app/main/default/objects/Opportunity/fields/BudgetConsiderationExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>BudgetConsiderationExpectedDate__c</fullName>
    <label>予算検討予定日</label>
    <type>Date</type>
</CustomField>