force-app/main/default/objects/Opportunity/fields/BudgetConsiderationInitialInputDate__c.field-meta.xml
<CustomField>
    <fullName>BudgetConsiderationInitialInputDate__c</fullName>
    <label>予算検討予定日の初回入力日</label>
    <type>Date</type>
</CustomField>