force-app/main/default/objects/Opportunity/fields/BudgetConsiderationLastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>BudgetConsiderationLastUpdateDate__c</fullName>
    <label>予算検討予定日の最終更新日</label>
    <type>Date</type>
</CustomField>