force-app/main/default/objects/Opportunity/fields/CancellationCauseKubun__c.field-meta.xml
<CustomField>
    <fullName>CancellationCauseKubun__c</fullName>
    <label>解約理由区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>競合に乗り換え</fullName>
            </value>
            <value>
                <fullName>コスト負担/予算見直し</fullName>
            </value>
            <value>
                <fullName>紙の書籍で情報収集する</fullName>
            </value>
            <value>
                <fullName>廃業・営業停止</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>