force-app/main/default/objects/Opportunity/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <label>解約日</label>
    <type>Date</type>
</CustomField>