force-app/main/default/objects/Opportunity/fields/CancellationPhase__c.field-meta.xml
<CustomField>
    <fullName>CancellationPhase__c</fullName>
    <label>解約フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>解約</fullName>
            </value>
            <value>
                <fullName>継続</fullName>
            </value>
            <value>
                <fullName>アカウント数変更</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>