force-app/main/default/objects/Opportunity/fields/CancellationSupportedStatus__c.field-meta.xml
<CustomField>
    <fullName>CancellationSupportedStatus__c</fullName>
    <label>解約対応状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未対応</fullName>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>対応完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>