force-app/main/default/objects/Opportunity/fields/CheckOfNegotiationProductsAndSales__c.field-meta.xml
<CustomField>
    <fullName>CheckOfNegotiationProductsAndSales__c</fullName>
    <formula>SalesStacked__c =  NegotiationProductsStacked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談商品と売上のチェック</label>
    <type>Checkbox</type>
</CustomField>