force-app/main/default/objects/Opportunity/fields/CloudSignDocumentId__c.field-meta.xml
<CustomField>
    <fullName>CloudSignDocumentId__c</fullName>
    <label>CloudSignドキュメントID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>