force-app/main/default/objects/Opportunity/fields/CloudSignStatus__c.field-meta.xml
<CustomField>
    <fullName>CloudSignStatus__c</fullName>
    <label>CloudSign ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>先方確認中</fullName>
            </value>
            <value>
                <fullName>締結完了</fullName>
            </value>
            <value>
                <fullName>取り消し・却下</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>