force-app/main/default/objects/Opportunity/fields/CollisionCompetitiveQuotesExistence__c.field-meta.xml
<CustomField>
    <fullName>CollisionCompetitiveQuotesExistence__c</fullName>
    <label>競合の相見積もり有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>