force-app/main/default/objects/Opportunity/fields/CollisionIntroductionStatus__c.field-meta.xml
<CustomField>
    <fullName>CollisionIntroductionStatus__c</fullName>
    <label>競合の導入状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>