force-app/main/default/objects/Opportunity/fields/ContractAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractAccountNumber__c</fullName>
    <label>契約アカウント数</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>