force-app/main/default/objects/Opportunity/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <formula>ADDMONTHS( PostingStartDate__c ,12)-1</formula>
    <label>契約終了日</label>
    <type>Date</type>
</CustomField>