force-app/main/default/objects/Opportunity/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <formula>((YEAR(PostingEndDate__c+1) - YEAR(PostingStartDate__c))*12) + (MONTH(PostingEndDate__c+1) - MONTH(PostingStartDate__c))</formula>
    <label>契約 期間(月)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>