force-app/main/default/objects/Opportunity/fields/createRevenueFlag__c.field-meta.xml
<CustomField>
    <fullName>createRevenueFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>売上レコード作成フラグ</label>
    <type>Checkbox</type>
</CustomField>