force-app/main/default/objects/Opportunity/fields/DateFillingData__c.field-meta.xml
<CustomField>
    <fullName>DateFillingData__c</fullName>
    <label>データ流し込み日</label>
    <type>Date</type>
</CustomField>