force-app/main/default/objects/Opportunity/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>納品日</label>
    <type>Date</type>
</CustomField>