force-app/main/default/objects/Opportunity/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <label>合計金額（値引後）</label>
    <summarizedField>OpportunityLineItem.DisplayTotalAmountDistount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>