force-app/main/default/objects/Opportunity/fields/DiscountRateTotalNegotiation__c.field-meta.xml
<CustomField>
    <fullName>DiscountRateTotalNegotiation__c</fullName>
    <formula>IF (TotalAmountListPrice__c &gt; 0, 1-(DiscountAmount__c / TotalAmountListPrice__c), 0)

/*20231018修正*/
/*1-(DiscountAmount__c / TotalAmountListPrice__c)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談全体の値引率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>