force-app/main/default/objects/Opportunity/fields/DivisionAffiliationCount__c.field-meta.xml
<CustomField>
    <fullName>DivisionAffiliationCount__c</fullName>
    <label>部署の所属人数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>