force-app/main/default/objects/Opportunity/fields/DocumentConfirmationUrl__c.field-meta.xml
<CustomField>
    <fullName>DocumentConfirmationUrl__c</fullName>
    <inlineHelpText>クラウドサイン締結したURLのみを入力してください</inlineHelpText>
    <label>クラウドサインURL</label>
    <type>Url</type>
</CustomField>