force-app/main/default/objects/Opportunity/fields/EmailAddressOnApplication__c.field-meta.xml
<CustomField>
    <fullName>EmailAddressOnApplication__c</fullName>
    <label>申込時メールアドレス</label>
    <type>Email</type>
</CustomField>