force-app/main/default/objects/Opportunity/fields/EmployeeCountISEntry__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCountISEntry__c</fullName>
    <label>従業員数（IS入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>