force-app/main/default/objects/Opportunity/fields/EmployeeCountSelectionList__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCountSelectionList__c</fullName>
    <label>従業員数（選択リスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>