force-app/main/default/objects/Opportunity/fields/ExceptionBillPosting__c.field-meta.xml
<CustomField>
    <fullName>ExceptionBillPosting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求書郵送のみ</label>
    <type>Checkbox</type>
</CustomField>