force-app/main/default/objects/Opportunity/fields/ExemptionTarget__c.field-meta.xml
<CustomField>
    <fullName>ExemptionTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>非課税対象</label>
    <type>Checkbox</type>
</CustomField>