force-app/main/default/objects/Opportunity/fields/FailureCause__c.field-meta.xml
<CustomField>
    <fullName>FailureCause__c</fullName>
    <description>20150904 C・失注理由に名称変更
20150925 失注理由に名称変更</description>
    <label>失注理由</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>興味なし</fullName>
            </value>
            <value>
                <fullName>現状で十分</fullName>
            </value>
            <value>
                <fullName>当期予算無し（タイミング）</fullName>
            </value>
            <value>
                <fullName>予算不足</fullName>
            </value>
            <value>
                <fullName>他社導入決定</fullName>
            </value>
            <value>
                <fullName>担当違い</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>