force-app/main/default/objects/Opportunity/fields/FailureCauseDetail__c.field-meta.xml
<CustomField>
    <fullName>FailureCauseDetail__c</fullName>
    <label>失注理由詳細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FailureCause__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>金額により他社決定</fullName>
            </value>
            <value>
                <fullName>機能により他社決定</fullName>
            </value>
            <value>
                <fullName>コンテンツによる他社決定</fullName>
            </value>
            <value>
                <fullName>その他理由</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>