force-app/main/default/objects/Opportunity/fields/FirstVisitDate__c.field-meta.xml
<CustomField>
    <fullName>FirstVisitDate__c</fullName>
    <label>初回往訪日</label>
    <type>Date</type>
</CustomField>