force-app/main/default/objects/Opportunity/fields/GeneratedSpecialInformation__c.field-meta.xml
<CustomField>
    <fullName>GeneratedSpecialInformation__c</fullName>
    <label>特記事項自動生成文章</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>