force-app/main/default/objects/Opportunity/fields/IndustriesBL__c.field-meta.xml
<CustomField>
    <fullName>IndustriesBL__c</fullName>
    <label>業種（選択リスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>