force-app/main/default/objects/Opportunity/fields/infosysMemo_del__c.field-meta.xml
<CustomField>
    <fullName>infosysMemo_del__c</fullName>
    <label>情シスメモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>