force-app/main/default/objects/Opportunity/fields/IntroductionOtherCompanyService__c.field-meta.xml
<CustomField>
    <fullName>IntroductionOtherCompanyService__c</fullName>
    <label>導入他社サービス</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FailureCauseDetail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>legal library</fullName>
            </value>
            <value>
                <fullName>legalscape</fullName>
            </value>
            <value>
                <fullName>弁護士ドットコムライブラリー</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>