force-app/main/default/objects/Opportunity/fields/InvoiceInformation__c.field-meta.xml
<CustomField>
    <fullName>InvoiceInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求書情報</label>
    <referenceTo>InvoiceInformation__c</referenceTo>
    <relationshipLabel>商談</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>