force-app/main/default/objects/Opportunity/fields/IrregularDetailPayment__c.field-meta.xml
<CustomField>
    <fullName>IrregularDetailPayment__c</fullName>
    <label>イレギュラー詳細（支払いサイト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>