force-app/main/default/objects/Opportunity/fields/IrregularFrequency__c.field-meta.xml
<CustomField>
    <fullName>IrregularFrequency__c</fullName>
    <label>イレギュラ頻度</label>
    <length>100</length>
    <type>Text</type>
</CustomField>