force-app/main/default/objects/Opportunity/fields/IrregularMatter__c.field-meta.xml
<CustomField>
    <fullName>IrregularMatter__c</fullName>
    <label>【削除予定】イレギュラ事項</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>イレギュラなし</fullName>
                <default>true</default>
                <label>イレギュラなし</label>
            </value>
            <value>
                <fullName>支払サイト</fullName>
            </value>
            <value>
                <fullName>非課税対象</fullName>
            </value>
            <value>
                <fullName>請求書郵送のみ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>T-4OO 月間利用料</fullName>
                <isActive>false</isActive>
                <label>T-4OO 月間利用料</label>
            </value>
            <value>
                <fullName>楽々明細以外</fullName>
                <isActive>false</isActive>
                <label>楽々明細以外</label>
            </value>
            <value>
                <fullName>請求書郵送（紙）</fullName>
                <isActive>false</isActive>
                <label>請求書郵送（紙）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>