force-app/main/default/objects/Opportunity/fields/IrregularMatterMemo__c.field-meta.xml
<CustomField>
    <fullName>IrregularMatterMemo__c</fullName>
    <label>その他イレギュラ事項</label>
    <type>TextArea</type>
</CustomField>