force-app/main/default/objects/Opportunity/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>課題</label>
    <length>255</length>
    <type>Text</type>
</CustomField>