force-app/main/default/objects/Opportunity/fields/JobCategoryBL__c.field-meta.xml
<CustomField>
    <fullName>JobCategoryBL__c</fullName>
    <label>職種（選択リスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>