force-app/main/default/objects/Opportunity/fields/JobTitleISEntry__c.field-meta.xml
<CustomField>
    <fullName>JobTitleISEntry__c</fullName>
    <label>役職（IS入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>