force-app/main/default/objects/Opportunity/fields/JobTitleSelectionList__c.field-meta.xml
<CustomField>
    <fullName>JobTitleSelectionList__c</fullName>
    <label>役職（選択リスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>