force-app/main/default/objects/Opportunity/fields/LastPhaseDetailHistory__c.field-meta.xml
<CustomField>
    <fullName>LastPhaseDetailHistory__c</fullName>
    <label>最終フェーズ詳細履歴</label>
    <length>255</length>
    <type>Text</type>
</CustomField>