force-app/main/default/objects/Opportunity/fields/LastPhaseHistory__c.field-meta.xml
<CustomField>
    <fullName>LastPhaseHistory__c</fullName>
    <label>最終フェーズ履歴</label>
    <length>255</length>
    <type>Text</type>
</CustomField>