force-app/main/default/objects/Opportunity/fields/LeadAttribute__c.field-meta.xml
<CustomField>
    <fullName>LeadAttribute__c</fullName>
    <label>リード属性</label>
    <length>255</length>
    <type>Text</type>
</CustomField>