force-app/main/default/objects/Opportunity/fields/LeadEarnDate__c.field-meta.xml
<CustomField>
    <fullName>LeadEarnDate__c</fullName>
    <label>リード獲得日</label>
    <type>Date</type>
</CustomField>