force-app/main/default/objects/Opportunity/fields/LeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceDetail__c</fullName>
    <label>リードソース詳細</label>
    <length>100</length>
    <type>Text</type>
</CustomField>