force-app/main/default/objects/Opportunity/fields/LeadType__c.field-meta.xml
<CustomField>
    <fullName>LeadType__c</fullName>
    <label>リードタイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>資料請求</fullName>
            </value>
            <value>
                <fullName>デモ問い合わせ</fullName>
            </value>
            <value>
                <fullName>トライアル申込</fullName>
            </value>
            <value>
                <fullName>スタンダード申込</fullName>
            </value>
            <value>
                <fullName>スタンダードプラス申込</fullName>
            </value>
            <value>
                <fullName>ビジネス申込</fullName>
            </value>
            <value>
                <fullName>セミナー</fullName>
            </value>
            <value>
                <fullName>展示会</fullName>
            </value>
            <value>
                <fullName>google</fullName>
            </value>
            <value>
                <fullName>yahoo</fullName>
            </value>
            <value>
                <fullName>facebook</fullName>
            </value>
            <value>
                <fullName>ホワイトペーパー</fullName>
            </value>
            <value>
                <fullName>イベント</fullName>
            </value>
            <value>
                <fullName>お問い合わせ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>