force-app/main/default/objects/Opportunity/fields/LegalWorkWorkersCountISEntry__c.field-meta.xml
<CustomField>
    <fullName>LegalWorkWorkersCountISEntry__c</fullName>
    <label>法務従事者人数（IS入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>