force-app/main/default/objects/Opportunity/fields/LegalWorkWorkersISEntry__c.field-meta.xml
<CustomField>
    <fullName>LegalWorkWorkersISEntry__c</fullName>
    <label>法務従事者（IS入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>