force-app/main/default/objects/Opportunity/fields/LossRecycledPhase__c.field-meta.xml
<CustomField>
    <fullName>LossRecycledPhase__c</fullName>
    <label>失注リサイクルフェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01_未対応</fullName>
            </value>
            <value>
                <fullName>02_対応中</fullName>
            </value>
            <value>
                <fullName>03_対応完了（アポ獲得）</fullName>
            </value>
            <value>
                <fullName>04_対応完了（アポ獲得できず）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>