force-app/main/default/objects/Opportunity/fields/LossRecycledTime__c.field-meta.xml
<CustomField>
    <fullName>LossRecycledTime__c</fullName>
    <label>失注リサイクル日時</label>
    <type>Date</type>
</CustomField>