force-app/main/default/objects/Opportunity/fields/ManualCreatingFlag__c.field-meta.xml
<CustomField>
    <fullName>ManualCreatingFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>請求書を手動で作成する必要がある際にチェック</inlineHelpText>
    <label>手動作成フラグ</label>
    <type>Checkbox</type>
</CustomField>