force-app/main/default/objects/Opportunity/fields/MeasureList__c.field-meta.xml
<CustomField>
    <fullName>MeasureList__c</fullName>
    <label>施策リスト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeasureList</valueSetName>
    </valueSet>
</CustomField>