force-app/main/default/objects/Opportunity/fields/NegotiationProductsStacked__c.field-meta.xml
<CustomField>
    <fullName>NegotiationProductsStacked__c</fullName>
    <label>商談商品の積上げ</label>
    <summarizedField>OpportunityLineItem.DisplayTotalAmountDistount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>