force-app/main/default/objects/Opportunity/fields/NegotiationRepPerson__c.field-meta.xml
<CustomField>
    <fullName>NegotiationRepPerson__c</fullName>
    <label>【削除予定】商談担当者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>飯田綾</fullName>
            </value>
            <value>
                <fullName>海津直央</fullName>
            </value>
            <value>
                <fullName>原田大介</fullName>
            </value>
            <value>
                <fullName>山口佳奈</fullName>
            </value>
            <value>
                <fullName>野上真央</fullName>
            </value>
            <value>
                <fullName>加藤翼</fullName>
            </value>
            <value>
                <fullName>池上琴美</fullName>
            </value>
            <value>
                <fullName>武井 駿一</fullName>
            </value>
            <value>
                <fullName>佐藤美佳子</fullName>
            </value>
            <value>
                <fullName>兼坂真美</fullName>
            </value>
            <value>
                <fullName>櫻井彩夏</fullName>
            </value>
            <value>
                <fullName>0052w00000DMVDZAA5</fullName>
                <isActive>false</isActive>
                <label>0052w00000DMVDZAA5</label>
            </value>
            <value>
                <fullName>0052w00000HcPUWAA3</fullName>
                <isActive>false</isActive>
                <label>0052w00000HcPUWAA3</label>
            </value>
            <value>
                <fullName>0052w00000HnTGgAAN</fullName>
                <isActive>false</isActive>
                <label>0052w00000HnTGgAAN</label>
            </value>
            <value>
                <fullName>佐藤 本一郎</fullName>
                <isActive>false</isActive>
                <label>佐藤 本一郎</label>
            </value>
            <value>
                <fullName>山口 佳奈</fullName>
                <isActive>false</isActive>
                <label>山口 佳奈</label>
            </value>
            <value>
                <fullName>海津 直央</fullName>
                <isActive>false</isActive>
                <label>海津 直央</label>
            </value>
            <value>
                <fullName>阿部 亜未</fullName>
                <isActive>false</isActive>
                <label>阿部 亜未</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>