force-app/main/default/objects/Opportunity/fields/NextUpdateTimeException__c.field-meta.xml
<CustomField>
    <fullName>NextUpdateTimeException__c</fullName>
    <formula>AutoUpdatable__c = false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>次回更新時期例外</label>
    <type>Checkbox</type>
</CustomField>