force-app/main/default/objects/Opportunity/fields/NoticeEditExists__c.field-meta.xml
<CustomField>
    <fullName>NoticeEditExists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>特記事項編集有</label>
    <type>Checkbox</type>
</CustomField>